devops: Se suprime paso de pruebas unitarias pq se queda esperando input de un usuario. udistrital/resoluciones_mid_v2#13

--- a/.drone.yml
+++ b/.drone.yml
@@ -42,14 +42,14 @@ steps:
     event:
     - push
 
-- name: prueba_unitarias
-  image: node:16.13.0
-  commands:
-  - npm i
-  - npm run test
-  when:
-    branch:
-    - feature/*
+# - name: prueba_unitarias
+#   image: node:16.13.0
+#   commands:
+#   - npm i
+#   - npm run test
+#   when:
+#     branch:
+#     - feature/*
 #
 # - name:  pruebas_linter
 #   image: node:14.15.2
