--- a/.drone.yml
+++ b/.drone.yml
@@ -135,33 +135,34 @@ steps:
     event:
     - push
 
-# - name: notify_telegram
-#   image: appleboy/drone-telegram
-#   settings:
-#     token:
-#       from_secret: telegram_token
-#     to:
-#       from_secret: telegram_to
-#     format: html
-#     message: >
-#       {{#success build.status}}
-#         ✅ <a href="{{build.link}}">SUCCESS</a> <b>Build #{{build.number}}</b> (type: <code>{{ build.event }}</code>)
-#         <b>Repo:</b><code>{{repo.name}}</code> <b>Branch:</b><code>{{commit.branch}}</code>
-#         <b>Commit:</b> <a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
-#         <b>Autor:</b>{{commit.author}} <code>&#128526 </code>
-#       {{else}}
-#         ❌ <a href="{{build.link}}">FAILURE</a> <b>Build #{{build.number}}</b> (type: <code>{{ build.event }}</code>)
-#         <b>Repo:</b><code>{{repo.name}}</code> <b>Branch:</b> <code>{{commit.branch}}</code>
-#         <b>Commit:</b> <a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
-#         <b>Autor:</b>{{commit.author}} <code>&#128549 </code>
-#       {{/success}}
-#   when:
-#     branch:
-#     - develop
-#     - release/*
-#     - master
-#     event:
-#     - push
-#     status:
-#     - failure
-#     - success
+- name: notify_telegram
+  image: appleboy/drone-telegram
+  failure: ignore
+  settings:
+    token:
+      from_secret: telegram_token
+    to:
+      from_secret: telegram_to
+    format: html
+    message: >
+      {{#success build.status}}
+        ✅ <a href="{{build.link}}">SUCCESS</a> <b>Build #{{build.number}}</b> (type: <code>{{ build.event }}</code>)
+        <b>Repo:</b><code>{{repo.name}}</code> <b>Branch:</b><code>{{commit.branch}}</code>
+        <b>Commit:</b> <a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
+        <b>Autor:</b>{{commit.author}} <code>&#128526 </code>
+      {{else}}
+        ❌ <a href="{{build.link}}">FAILURE</a> <b>Build #{{build.number}}</b> (type: <code>{{ build.event }}</code>)
+        <b>Repo:</b><code>{{repo.name}}</code> <b>Branch:</b> <code>{{commit.branch}}</code>
+        <b>Commit:</b> <a href="{{commit.link}}">{{truncate commit.sha 7}}</a>
+        <b>Autor:</b>{{commit.author}} <code>&#128549 </code>
+      {{/success}}
+  when:
+    branch:
+    - develop
+    - release/*
+    - master
+    event:
+    - push
+    status:
+    - failure
+    - success
