feat: Se agrega indicador de carga y mensajes de error en caso de fallos. #36

--- a/package.json
+++ b/package.json
@@ -14,43 +14,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.15",
+    "@angular/animations": "~12.2.16",
     "@angular/cdk": "^12.2.13",
-    "@angular/common": "~12.2.15",
-    "@angular/compiler": "~12.2.15",
-    "@angular/core": "~12.2.15",
-    "@angular/forms": "~12.2.15",
+    "@angular/common": "~12.2.16",
+    "@angular/compiler": "~12.2.16",
+    "@angular/core": "~12.2.16",
+    "@angular/forms": "~12.2.16",
     "@angular/material": "^12.2.13",
     "@angular/material-moment-adapter": "^12.2.13",
-    "@angular/platform-browser": "~12.2.15",
-    "@angular/platform-browser-dynamic": "~12.2.15",
-    "@angular/router": "~12.2.15",
-    "@angular/service-worker": "~12.2.15",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
+    "@angular/service-worker": "~12.2.16",
     "moment": "^2.29.1",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.7.2",
-    "ngx-extended-pdf-viewer": "^11.1.2",
-    "pdfmake": "^0.2.4",
-    "pdfmake-wrapper": "^2.1.2",
-    "rxjs": "~7.4.0",
-    "sweetalert2": "^11.3.0",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "ngx-extended-pdf-viewer": "^12.1.2",
+    "rxjs": "~7.5.5",
+    "sweetalert2": "^11.4.10",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.14",
-    "@angular/cli": "~12.2.14",
-    "@angular/compiler-cli": "~12.2.15",
+    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular/cli": "~12.2.17",
+    "@angular/compiler-cli": "~12.2.16",
     "@types/jasmine": "~3.10.2",
     "@types/node": "^16.11.7",
-    "@types/pdfmake": "^0.1.19",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.9",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.1",
+    "karma": "^6.3.19",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.4.0",
