--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/jasmine": "~3.10.2",
     "@types/node": "^16.11.7",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.10.1",
+    "jasmine-core": "^4.2.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.0",
     "karma-chrome-launcher": "~3.1.1",
