--- a/package.json
+++ b/package.json
@@ -26,32 +26,40 @@
     "@angular/platform-browser-dynamic": "~12.2.16",
     "@angular/router": "~12.2.16",
     "@angular/service-worker": "~12.2.16",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "ng2-completer": "^9.0.1",
     "ng2-smart-table": "^1.7.2",
     "ngx-extended-pdf-viewer": "^12.1.2",
-    "rxjs": "~7.5.5",
-    "sweetalert2": "^11.4.10",
+    "rxjs": "~7.5.7",
+    "sweetalert2": "^11.4.37",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.17",
-    "@angular/cli": "~12.2.17",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
+    "@angular/cli": "~12.2.18",
     "@angular/compiler-cli": "~12.2.16",
     "@types/jasmine": "~3.10.2",
     "@types/node": "^16.11.7",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest",
+    "jasmine-core": "^4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.4.0",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.1",
+    "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~10.8.1",
-    "tslint": "~6.1.3",
+    "ts-node": "~10.9.1",
     "typescript": "4.3.5"
   }
 }
