--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rxjs": "~7.5.7",
     "sweetalert2": "^11.7.1",
     "tslib": "^2.4.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
